[package]
name = "bacnet_parse"
version = "0.1.1"
authors = ["Jan Tache <j.andreitabs@gmail.com>"]
homepage = "https://github.com/jtroo/bacnet_parse"
repository = "https://github.com/jtroo/bacnet_parse"
description = "no_std BACnet parser"
categories = ["network-programming", "parser-implementations"]
documentation = "https://docs.rs/bacnet_parse"
license = "MPL-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayref = "0.3.5"

[package.metadata.docs.rs]
all-features = true
